manifests/examples/traefik/ingress-middleware-pods.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /nginx
      - /local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd
    cert-manager.io/issuer: "letsencrypt-prod"
  name: test-nginx-ingress
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ptisma.xyz
    - www.ptisma.xyz      
    secretName: ptisma-xyz-tls
  rules:
  - host: ptisma.xyz
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: ptisma.xyz
    http:
      paths:
      - path: /local
        pathType: Prefix
        backend:
          service:
            name: external-nginx-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-nginx-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-nginx-service
subsets:
- addresses:
  - ip: 10.0.0.3
  ports:
  - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
